--- a/heima-leadnews-gateway/heima-leadnews-wemedia-gateway/pom.xml
+++ b/heima-leadnews-gateway/heima-leadnews-wemedia-gateway/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>heima-leadnews</artifactId>
+        <artifactId>heima-leadnews-gateway</artifactId>
         <groupId>com.heima</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-<packaging>pom</packaging>
-    <artifactId>heima-leadnews-test</artifactId>
+
+    <artifactId>heima-leadnews-wemedia-gateway</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
